<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.activity.StudentAddCourseActivity">

    <com.hjq.bar.TitleBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/student_add_course_title" />

    <com.lft.widget.view.RegexEditText
        android:id="@+id/et_add_course_id"
        style="@style/EditTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@color/white"
        android:drawablePadding="15dp"
        android:hint="@string/student_add_course_hint"
        android:inputType="number"
        android:paddingHorizontal="20dp"
        android:paddingVertical="18dp"
        android:singleLine="true" />

    <View
        style="@style/HorizontalLineStyle"
        android:layout_marginHorizontal="20dp" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_find_course"
        style="@style/ButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:layout_marginVertical="30dp"
        android:text="@string/student_add_course_next" />



</LinearLayout>