<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/springGreen"
    android:orientation="vertical"
    tools:context="ui.activity.CourseActivity">

    <com.hjq.bar.TitleBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="签到" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingHorizontal="40dp">

    <com.lft.widget.view.ClearEditText
        android:id="@+id/et_student_sign_code"
        style="@style/EditTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/common_sign_input_hint"
        android:maxLength="4"
        android:maxLines="1"
        app:regexType="count" />

    <View style="@style/HorizontalLineStyle" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_student_sign_commit"
        style="@style/ButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:layout_marginVertical="30dp"
        android:text="@string/common_sign" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <View
            style="@style/HorizontalLineStyle"
            android:layout_width="60dp"
            android:layout_weight="1" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:text="课程信息"
            android:textColor="@color/black50" />

        <View
            style="@style/HorizontalLineStyle"
            android:layout_width="60dp"
            android:layout_weight="1" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="vertical">

        <com.lft.widget.layout.SettingBar
            android:id="@+id/sb_course_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/enamel"
            android:layout_marginTop="10dp"
            app:bar_leftSize="8dp"
            app:bar_rightSize="8dp"
            app:bar_leftText="@string/course_name_hint"
            tools:bar_rightText="Java" />

        <com.lft.widget.layout.SettingBar
            android:id="@+id/sb_attendance_rate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/enamel"
            android:layout_marginTop="1dp"
            app:bar_leftSize="8dp"
            app:bar_rightSize="8dp"
            app:bar_leftText="@string/attendance_rate"
            tools:bar_rightText="1.00" />
        <com.lft.widget.layout.SettingBar
            android:id="@+id/sb_leave_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/enamel"
            android:layout_marginTop="1dp"
            app:bar_leftSize="8dp"
            app:bar_rightSize="8dp"
            app:bar_leftText="@string/leave_number"
            tools:bar_rightText="0" />
        <com.lft.widget.layout.SettingBar
            android:id="@+id/sb_late_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/enamel"
            android:layout_marginTop="1dp"
            app:bar_leftSize="8dp"
            app:bar_rightSize="8dp"
            app:bar_leftText="@string/late_number"
            tools:bar_rightText="0" />

    </LinearLayout>

</LinearLayout>